<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="16dp"
    android:orientation="vertical"
    tools:context=".LauncherActivity">

    <TextView
        android:id="@+id/tv_num_tabs"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:gravity="center"
        android:text="Number Of Tabs"
        android:textColor="@android:color/black"
        android:textSize="@dimen/launcher_screen_text_size" />

    <Spinner
        android:id="@+id/spinner_num_tabs"
        android:layout_width="match_parent"
        android:layout_height="50dp" />

    <Button
        android:id="@+id/btGo"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/colorPrimaryDark"
        android:gravity="center"
        android:text="Go"
        android:layout_marginTop="50dp"
        android:textColor="@android:color/white"
        android:textSize="@dimen/launcher_screen_text_size" />

</LinearLayout>