<resources>
    <string name="app_name">TabAnimation</string>
</resources>
